# bot_detector

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  workspace.toml
_kafka/: Dockerfile  pyproject.toml
_kafka/src/: __init__.py  core.py  kafka_data.py  kafka_topics.py
bases/bot_detector/hiscore_scraper/: __init__.py  core.py
bases/bot_detector/scraper_service/: __init__.py  core.py
components/bot_detector/kafka_client/: consumer.py  producer.py
components/bot_detector/proxy_manager/: __init__.py  core.py
components/bot_detector/schema/: __init__.py  core.py
projects/hiscore-worker/: pyproject.toml
projects/hiscore_scraper/: Dockerfile  pyproject.toml  requirements.txt
projects/scraper/: pyproject.toml
test/bases/bot_detector/hiscore-worker/: test_core.py
test/bases/bot_detector/hiscore_scraper/: test_core.py
test/bases/bot_detector/public-api/: test_core.py
test/bases/bot_detector/scraper/: test_core.py
test/components/bot_detector/kafka_client/: test_core.py
test/components/bot_detector/proxy_manager/: test_core.py
test/components/bot_detector/schema/: test_core.py
