[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bot-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.11",
    "aiokafkaengine>=0.1.0",
    "osrs>=0.0.14",
    "pydantic-settings>=2.7.0",
    "pydantic>=2.10.4",
    "pytest-asyncio>=0.25.0",
]

[dependency-groups]
dev = [
    "kafka-python>=2.0.2",
    "polylith-cli>=1.24.0",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]



[tool.hatch.build]
dev-mode-dirs = ["components", "bases", "development", "."]


[tool.hatch.metadata]
allow-direct-references = true
