[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[project]
name = "hiscore_scraper"
version = "0.1.0"



requires-python = ">=3.10"

dependencies = [
    "aiokafkaengine>=0.1.0",
    "osrs>=0.0.14",
    "pydantic-settings>=2.7.0",
    "pydantic>=2.10.4",
]

[project.scripts]
hiscore_scraper = "bot_detector.hiscore_scraper.core:main"

# This section is needed for building
[tool.hatch.build.targets.wheel]
packages = ["bot_detector"]

[tool.hatch.build.hooks.polylith-bricks]

[tool.polylith.bricks]
"../../bases/bot_detector/hiscore_scraper" = "bot_detector/hiscore_scraper"
"../../components/bot_detector/proxy_manager" = "bot_detector/proxy_manager"
"../../components/bot_detector/schema" = "bot_detector/schema"
