[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[project]
name = "scraper"
version = "0.1.0"



requires-python = ">=3.12"

dependencies = [
    "aiohttp>=3.11.11",
    "osrs>=0.0.14",
]

[tool.hatch.build.hooks.polylith-bricks]

[tool.polylith.bricks]

[tool.hatch.build.targets.wheel]
packages = ["bot_detector"]
